--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,7 @@
 @import './common/common.scss';
 @import './components/components.scss';
+@import './ui/ui.scss';
+@import './pages/pages.scss';
 
 body {
     font-family: 'Montserrat', sans-serif;
